@@ -283,21 +283,6 @@
         <remarks>To be added</remarks>
       </Docs>
     </Member>
-    <Member MemberName="SetUserData">
-      <MemberSignature Language="C#" Value="public void SetUserData (IntPtr user_data);" />
-      <MemberType>Method</MemberType>
-      <ReturnValue>
-        <ReturnType>System.Void</ReturnType>
-      </ReturnValue>
-      <Parameters>
-        <Parameter Name="user_data" Type="System.IntPtr" />
-      </Parameters>
-      <Docs>
-        <summary>To be added</summary>
-        <param name="user_data">To be added: an object of type 'IntPtr'</param>
-        <remarks>To be added</remarks>
-      </Docs>
-    </Member>
     <Member MemberName="BeginPaintRegion">
       <MemberSignature Language="C#" Value="public void BeginPaintRegion (Gdk.Region region);" />
       <MemberType>Method</MemberType>
@@ -538,21 +523,6 @@
       <Parameters />
       <Docs>
         <summary>To be added</summary>
-        <remarks>To be added</remarks>
-      </Docs>
-    </Member>
-    <Member MemberName="GetUserData">
-      <MemberSignature Language="C#" Value="public void GetUserData (IntPtr data);" />
-      <MemberType>Method</MemberType>
-      <ReturnValue>
-        <ReturnType>System.Void</ReturnType>
-      </ReturnValue>
-      <Parameters>
-        <Parameter Name="data" Type="System.IntPtr" />
-      </Parameters>
-      <Docs>
-        <summary>To be added</summary>
-        <param name="data">To be added: an object of type 'IntPtr'</param>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
@@ -1471,6 +1441,19 @@
         <summary>To be added</summary>
         <param name="rect">a <see cref="T:Gdk.Rectangle" /></param>
         <param name="expose">a <see cref="T:System.Boolean" /></param>
+        <remarks>To be added</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="UserData">
+      <MemberSignature Language="C#" Value="public IntPtr UserData { set; get; };" />
+      <MemberType>Property</MemberType>
+      <ReturnValue>
+        <ReturnType>System.IntPtr</ReturnType>
+      </ReturnValue>
+      <Parameters />
+      <Docs>
+        <summary>To be added</summary>
+        <returns>a <see cref="T:System.IntPtr" /></returns>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
