@@ -713,8 +713,19 @@
         <remarks>To be added</remarks>
       </Docs>
     </Member>
-    <Member MemberName="OnRealize">
-      <MemberSignature Language="C#" Value="protected virtual void OnRealize ();" />
+    <Member MemberName=".ctor">
+      <MemberSignature Language="C#" Value="protected CanvasItem ();" />
+      <MemberType>Constructor</MemberType>
+      <ReturnValue />
+      <Parameters />
+      <Docs>
+        <summary>To be added</summary>
+        <returns>a <see cref="T:Gnome.CanvasItem" /></returns>
+        <remarks>To be added</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="Realize">
+      <MemberSignature Language="C#" Value="protected virtual void Realize ();" />
       <MemberType>Method</MemberType>
       <ReturnValue>
         <ReturnType>System.Void</ReturnType>
@@ -725,8 +736,8 @@
         <remarks>To be added</remarks>
       </Docs>
     </Member>
-    <Member MemberName="OnPoint">
-      <MemberSignature Language="C#" Value="protected virtual double OnPoint (double x, double y, int cx, int cy, out Gnome.CanvasItem actual_item);" />
+    <Member MemberName="Point">
+      <MemberSignature Language="C#" Value="protected virtual double Point (double x, double y, int cx, int cy, out Gnome.CanvasItem actual_item);" />
       <MemberType>Method</MemberType>
       <ReturnValue>
         <ReturnType>System.Double</ReturnType>
@@ -749,8 +760,8 @@
         <remarks>To be added</remarks>
       </Docs>
     </Member>
-    <Member MemberName="OnDraw">
-      <MemberSignature Language="C#" Value="protected virtual void OnDraw (Gdk.Drawable drawable, int x, int y, int width, int height);" />
+    <Member MemberName="Draw">
+      <MemberSignature Language="C#" Value="protected virtual void Draw (Gdk.Drawable drawable, int x, int y, int width, int height);" />
       <MemberType>Method</MemberType>
       <ReturnValue>
         <ReturnType>System.Void</ReturnType>
@@ -772,8 +783,8 @@
         <remarks>To be added</remarks>
       </Docs>
     </Member>
-    <Member MemberName="OnRender">
-      <MemberSignature Language="C#" Value="protected virtual void OnRender (ref Gnome.CanvasBuf buf);" />
+    <Member MemberName="Render">
+      <MemberSignature Language="C#" Value="protected virtual void Render (ref Gnome.CanvasBuf buf);" />
       <MemberType>Method</MemberType>
       <ReturnValue>
         <ReturnType>System.Void</ReturnType>
@@ -787,8 +798,8 @@
         <remarks>To be added</remarks>
       </Docs>
     </Member>
-    <Member MemberName="OnUpdate">
-      <MemberSignature Language="C#" Value="protected virtual void OnUpdate (double [] affine, ref Art.SVP clip_path, int flags);" />
+    <Member MemberName="Update">
+      <MemberSignature Language="C#" Value="protected virtual void Update (double [] affine, ref Art.SVP clip_path, int flags);" />
       <MemberType>Method</MemberType>
       <ReturnValue>
         <ReturnType>System.Void</ReturnType>
@@ -803,17 +814,6 @@
         <param name="affine">a <see cref="T:System.Double" /></param>
         <param name="clip_path">a <see cref="T:Art.SVP" /></param>
         <param name="flags">a <see cref="T:System.Int32" /></param>
-        <remarks>To be added</remarks>
-      </Docs>
-    </Member>
-    <Member MemberName=".ctor">
-      <MemberSignature Language="C#" Value="protected CanvasItem ();" />
-      <MemberType>Constructor</MemberType>
-      <ReturnValue />
-      <Parameters />
-      <Docs>
-        <summary>To be added</summary>
-        <returns>a <see cref="T:Gnome.CanvasItem" /></returns>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
