@@ -643,8 +643,19 @@
         <remarks>To be added</remarks>
       </Docs>
     </Member>
-    <Member MemberName="OnForall">
-      <MemberSignature Language="C#" Value="protected virtual void OnForall (bool include_internals, Gtk.Container+CallbackInvoker invoker);" />
+    <Member MemberName=".ctor">
+      <MemberSignature Language="C#" Value="protected Container ();" />
+      <MemberType>Constructor</MemberType>
+      <ReturnValue />
+      <Parameters />
+      <Docs>
+        <summary>To be added</summary>
+        <returns>a <see cref="T:Gtk.Container" /></returns>
+        <remarks>To be added</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="ForAll">
+      <MemberSignature Language="C#" Value="protected virtual void ForAll (bool include_internals, Gtk.Container+CallbackInvoker invoker);" />
       <MemberType>Method</MemberType>
       <ReturnValue>
         <ReturnType>System.Void</ReturnType>
@@ -657,17 +668,6 @@
         <summary>To be added</summary>
         <param name="include_internals">a <see cref="T:System.Boolean" /></param>
         <param name="invoker">a <see cref="T:Gtk.Container+CallbackInvoker" /></param>
-        <remarks>To be added</remarks>
-      </Docs>
-    </Member>
-    <Member MemberName=".ctor">
-      <MemberSignature Language="C#" Value="protected Container ();" />
-      <MemberType>Constructor</MemberType>
-      <ReturnValue />
-      <Parameters />
-      <Docs>
-        <summary>To be added</summary>
-        <returns>a <see cref="T:Gtk.Container" /></returns>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
