@@ -1182,18 +1182,6 @@
         </remarks>
       </Docs>
     </Member>
-    <Member MemberName="Allocation">
-      <MemberSignature Language="C#" Value="public Gdk.Rectangle Allocation { get; };" />
-      <MemberType>Property</MemberType>
-      <ReturnValue>
-        <ReturnType>Gdk.Rectangle</ReturnType>
-      </ReturnValue>
-      <Docs>
-        <summary>To be added</summary>
-        <returns>To be added: an object of type 'Gdk.Rectangle'</returns>
-        <remarks>To be added</remarks>
-      </Docs>
-    </Member>
     <Member MemberName="Accessible">
       <MemberSignature Language="C#" Value="public Atk.Object Accessible { get; };" />
       <MemberType>Property</MemberType>
@@ -4719,6 +4707,71 @@ handle focus grabs.</returns>
           Subclasses of <paramref name="widget" /> use this style property to correctly layout their children.
           </para>
         </remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="Allocation">
+      <MemberSignature Language="C#" Value="public Gdk.Rectangle Allocation { set; get; };" />
+      <MemberType>Property</MemberType>
+      <ReturnValue>
+        <ReturnType>Gdk.Rectangle</ReturnType>
+      </ReturnValue>
+      <Parameters />
+      <Docs>
+        <summary>Gets or Sets the widget's allocation.</summary>
+        <returns>a <see cref="T:Gdk.Rectangle" /> representing the size of the widget's allocation.</returns>
+        <remarks>None.</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="IsMapped">
+      <MemberSignature Language="C#" Value="public bool IsMapped { get; };" />
+      <MemberType>Property</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Boolean</ReturnType>
+      </ReturnValue>
+      <Parameters />
+      <Docs>
+        <summary>Check to see if the widget is Mapped</summary>
+        <returns>true if the widget is Mapped, false otherwise.</returns>
+        <remarks>None.</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="IsRealized">
+      <MemberSignature Language="C#" Value="public bool IsRealized { get; };" />
+      <MemberType>Property</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Boolean</ReturnType>
+      </ReturnValue>
+      <Parameters />
+      <Docs>
+        <summary>Checks to see if the widget is Realized</summary>
+        <returns>returns true if the widget is Realized</returns>
+        <remarks>None.</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="NoWindow">
+      <MemberSignature Language="C#" Value="public bool NoWindow { get; };" />
+      <MemberType>Property</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Boolean</ReturnType>
+      </ReturnValue>
+      <Parameters />
+      <Docs>
+        <summary>Checks for the NoWindow <see cref="T:Gtk.WidgetFlags" /></summary>
+        <returns>returns true if the NoWindow flag is set</returns>
+        <remarks>None.</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="Drawable">
+      <MemberSignature Language="C#" Value="public bool Drawable { get; };" />
+      <MemberType>Property</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Boolean</ReturnType>
+      </ReturnValue>
+      <Parameters />
+      <Docs>
+        <summary>Checks to see if the widget is Drawable</summary>
+        <returns>returns true if the widget is Drawable</returns>
+        <remarks>None.</remarks>
       </Docs>
     </Member>
   </Members>
