@@ -34,7 +34,10 @@ namespace GtkSharp.Docs {
 				while (iter.MoveNext ()) {
 					XmlElement elem = ((IHasXmlNode)iter.Current).GetNode () as XmlElement;
 					string member_type = elem["MemberType"].InnerText;
-					switch (member_type) { 
+					switch (member_type) {
+					case "Method":
+					case "Property":
+					case "Constructor":
 					case "Field":
 						string summary = elem["Docs"]["summary"].InnerText;
 						string remarks = elem["Docs"]["remarks"].InnerText;
