@@ -71,6 +71,8 @@
   <attr path="/api/namespace/object[@cname='GdkWindow']/method[@name='PeekChildren']" name="hidden">1</attr>
   <attr path="/api/namespace/object[@cname='GdkWindow']/method[@name='SetCursor']/parameters/parameter[@name='cursor']" name="null_ok">1</attr>
   <attr path="/api/namespace/object[@cname='GdkWindow']/method[@name='SetIconList']" name="hidden">1</attr>
+  <attr path="/api/namespace/object[@cname='GdkWindow']/method[@name='GetUserData']" name="hidden">1</attr>
+  <attr path="/api/namespace/object[@cname='GdkWindow']/method[@cname='gdk_window_set_user_data']" name="hidden">1</attr>
   <attr path="/api/namespace/struct[@cname='GdkEventAny']" name="hidden">1</attr>
   <attr path="/api/namespace/struct[@cname='GdkEventButton']" name="hidden">1</attr>
   <attr path="/api/namespace/struct[@cname='GdkEventClient']" name="hidden">1</attr>
