@@ -9,9 +9,12 @@
 
 /* Forward declarations */
 GdkRectangle *gtksharp_gtk_widget_get_allocation (GtkWidget *widget);
+void gtksharp_gtk_widget_set_allocation (GtkWidget *widget, GdkRectangle rect);
 GdkWindow *gtksharp_gtk_widget_get_window (GtkWidget *widget);
 void gtksharp_gtk_widget_set_window (GtkWidget *widget, GdkWindow *window);
 int gtksharp_gtk_widget_get_state (GtkWidget *widget);
+int gtksharp_gtk_widget_get_flags (GtkWidget *widget);
+void gtksharp_gtk_widget_set_flags (GtkWidget *widget, int flags);
 int gtksharp_gtk_widget_style_get_int (GtkWidget *widget, const char *name);
 /* */
 
@@ -19,6 +22,12 @@ GdkRectangle*
 gtksharp_gtk_widget_get_allocation (GtkWidget *widget)
 {
 	return &widget->allocation;
+}
+
+void
+gtksharp_gtk_widget_set_allocation (GtkWidget *widget, GdkRectangle rect)
+{
+	widget->allocation = rect;
 }
 
 GdkWindow *
