@@ -1,3 +1,12 @@
+2004-06-07  Todd Berman  <tberman@sevenl.net>
+
+	* gtk/Widget.custom: expose some easy bool properties for checking
+	certain WidgetFlags. Make Allocation a settable property.
+	* gtk/glue/widget.c: bit of glue to make Allocation settable.
+	* gdk/Window.custom: expose UserData as a usable IntPtr property.
+	* gdk/Gdk.metadata: hide old GetUserData/SetUserData methods.
+	* doc/*: ran the updater.
+
 2004-06-07  Jeroen Zwartepoorte  <jeroen@xs4all.nl>
 
 	* gtk/Widget.custom: Add FocusLineWidth property.
